--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html>
   <head>
     <title>Calculator</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>Calculator</h1>
-    <script src="js/scripts.js"></script>
+    <div class="container">
+      <h1>Calculator</h1>
+      <form id="add">
+        <div class="form-group">
+          <label for="num1">1st number:</label>
+          <input id="num1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="num2">2nd number:</label>
+          <input id="num2" class="form-control" type="text">
+        </div>
+      <button type="submit" class="btn btn-primary">Add!</button>
+      </form>
+      <div id="addOutput">
+
+      </div>
+      <button type="submit" class="btn btn-primary">Subtract!</button>
+      </form>
+      <div id="subtractOutput">
+
+      </div>
+    </div>
   </body>
 </html>
