--- a/index.html
+++ b/index.html
@@ -12,23 +12,61 @@
       <h1>Calculator</h1>
       <form id="add">
         <div class="form-group">
-          <label for="num1">1st number:</label>
-          <input id="num1" class="form-control" type="text">
+          <label for="add1">1st number:</label>
+          <input id="add1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="num2">2nd number:</label>
-          <input id="num2" class="form-control" type="text">
+          <label for="add2">2nd number:</label>
+          <input id="add2" class="form-control" type="text">
         </div>
-      <button type="submit" class="btn btn-primary">Add!</button>
-      </form>
-      <div id="addOutput">
+        <button id="add" type="submit" class="btn btn-primary">Add!</button>
+        <div id="addOutput">
 
-      </div>
-      <button type="submit" class="btn btn-primary">Subtract!</button>
+        </div>
       </form>
-      <div id="subtractOutput">
+      <form id="sub">
+        <div class="form-group">
+          <label for="sub1">1st number:</label>
+          <input id="sub1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="sub2">2nd number:</label>
+          <input id="sub2" class="form-control" type="text">
+        </div>
+        <button id="sub" type="submit" class="btn btn-primary">Subtract!</button>
+        <div id="subOutput">
 
-      </div>
+        </div>
+      </form>
+      <form id="multiply">
+        <div class="form-group">
+          <label for="multiply1">1st number:</label>
+          <input id="multiply1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="multiply2">2nd number:</label>
+          <input id="multiply2" class="form-control" type="text">
+        </div>
+        <button id="multiply" type="submit" class="btn btn-primary">Multiply!</button>
+        <div id="multiplyOutput">
+
+        </div>
+      </form>
+      <form id="divide">
+        <div class="form-group">
+          <label for="divide1">1st number:</label>
+          <input id="divide1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="divide2">2nd number:</label>
+          <input id="divide2" class="form-control" type="text">
+        </div>
+        <button id="divide" type="submit" class="btn btn-primary">Divide!</button>
+        <div id="divideOutput">
+
+        </div>
+      </form>
+      
     </div>
   </body>
 </html>
