--- a/index.html
+++ b/index.html
@@ -10,63 +10,44 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
-      <form id="add">
+      <form id="calculator">
         <div class="form-group">
-          <label for="add1">1st number:</label>
-          <input id="add1" class="form-control" type="text">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="add2">2nd number:</label>
-          <input id="add2" class="form-control" type="text">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
         </div>
-        <button id="add" type="submit" class="btn btn-primary">Add!</button>
-        <div id="addOutput">
-
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="add" checked>
+            add
+          </label>
         </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="subtract">
+            subtract
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="multiply">
+            multiply
+          </label>
+        </div>        
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="divide">
+            divide
+          </label>
+        </div>        
+        <button type="submit" class="btn">Go!</button>
       </form>
-      <form id="sub">
-        <div class="form-group">
-          <label for="sub1">1st number:</label>
-          <input id="sub1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="sub2">2nd number:</label>
-          <input id="sub2" class="form-control" type="text">
-        </div>
-        <button id="sub" type="submit" class="btn btn-primary">Subtract!</button>
-        <div id="subOutput">
+      <div id="output">
 
-        </div>
-      </form>
-      <form id="multiply">
-        <div class="form-group">
-          <label for="multiply1">1st number:</label>
-          <input id="multiply1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="multiply2">2nd number:</label>
-          <input id="multiply2" class="form-control" type="text">
-        </div>
-        <button id="multiply" type="submit" class="btn btn-primary">Multiply!</button>
-        <div id="multiplyOutput">
-
-        </div>
-      </form>
-      <form id="divide">
-        <div class="form-group">
-          <label for="divide1">1st number:</label>
-          <input id="divide1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="divide2">2nd number:</label>
-          <input id="divide2" class="form-control" type="text">
-        </div>
-        <button id="divide" type="submit" class="btn btn-primary">Divide!</button>
-        <div id="divideOutput">
-
-        </div>
-      </form>
-      
+      </div>
     </div>
   </body>
 </html>
